# text-gen-util

./: Makefile  README.md  crawl.py  generate.py  pyproject.toml  pytest.ini  train.py
data/: documentation.txt  markul.txt  nlp.txt
src/: dataset.py  dictionary.py  model.py  trainer.py  utils.py
tests/: conftest.py  test_generation.py  test_train.py
