[tool.poetry]
name = "text-gen-util"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
torch = "^1.12.1"
torchtext = "^0.13.1"
wikipedia = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
