[tool.poetry]
name = "text-gen-util"
version = "0.1.0"
description = ""
authors = ["Ruslan Sirazhetdinov <ruslansir@icloud.com>"]

[tool.poetry.dependencies]
python = ">=3.8"
torch = "^1.12.1"
torchtext = "^0.13.1"
wikipedia = "^1.4.0"
numpy = "^1.23.3"
scipy = "^1.6.1"
pyfillet = {git = "https://github.com/ivan-chai/pyfillet.git", rev = "main"}
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
